Configure app to use flutter_dotenv
This will allow us to keep the .env file out of source control, whilst still having an Env class for convenient environment variable access.

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,8 @@ dataHashUrl=
 fileSyncUrl=
 fileHashUrl=
 
-# If true, files will be stored in external storage, visible to the user.
-# If false, files will be stored in app's internal storage, hidden to the user.
+# If 'true', files will be stored in external storage, visible to the user.
+# If not 'true', files will be stored in app's internal storage, hidden to the user.
 debugStorageMode=
 
 # Path to the sqlite database file
