--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http: ^0.12.0+2             # BSD
   archive: ^2.0.8             # Apache 2.0
   path_provider: ^1.1.0       # BSD
+  flutter_dotenv: ^2.0.1      # MIT
   permission_handler: ^3.0.1  # MIT
 
   # Database related packages
@@ -57,6 +58,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
