--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,6 @@
 name: discover_deep_cove
 description: Guided walk application for visitors to Deep Cove.
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -20,53 +10,78 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  barcode_scan:
+  flutter_map: ^0.5.5+2
+  font_awesome_flutter: ^8.4.0
+  audioplayers: ^0.11.0  
+  carousel_pro: ^0.0.13
+  flutter_launcher_icons: "^0.7.2"
+  flutter_map_marker_cluster: ^0.2.0+1
+  toast: ^0.1.3  
+  image_picker: ^0.6.0+10
 
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "assets/icon/icon.png"
 
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
+  assets:
+  # util
+  - assets/icon/icon.png
+  - assets/peaks.png
+  - assets/map.mbtiles
+  - assets/logo.png
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  ##FactFile
+  # primary
+  - assets/images/primary/kea.jpg
+  - assets/images/primary/rifleman.jpg
+  - assets/images/primary/tomtit.jpg
+  - assets/images/primary/mountainBeech.jpg
+  - assets/images/primary/rimu.jpg
+  - assets/images/primary/pekinDuck.jpg
+  - assets/images/primary/powerStation.jpg
+  # secondary
+  - assets/images/secondary/kea.jpg
+  - assets/images/secondary/rifleman.jpg
+  - assets/images/secondary/tomtit.jpg
+  - assets/images/secondary/mountainBeech.jpg
+  - assets/images/secondary/rimu.jpg
+  - assets/images/secondary/pekinDuck.png
+  - assets/images/secondary/powerStation.jpg
+  #tertiary
+  - assets/images/tertiary/kea.jpg
+  - assets/images/tertiary/rifleman.jpg
+  - assets/images/tertiary/tomtit.jpg
+  - assets/images/tertiary/mountainBeech.jpg
+  - assets/images/tertiary/rimu.jpg
+  - assets/images/tertiary/pekinDuck.png
+  - assets/images/tertiary/powerStation.jpg
+
+  ##Activities
+  #count
+  - assets/images/activities/count/lancewood.jpg
+  #pictureSelect
+  - assets/images/activities/pictureSelect/mountainBeech.jpg
+  - assets/images/activities/pictureSelect/rimu.jpg
+  - assets/images/activities/pictureSelect/totara.jpg
+  #pictureTap
+  - assets/images/activities/pictureTap/powerStation.jpg
+  #textAnswer
+  - assets/images/activities/textAnswer/stump.jpg
+
+
+  # Pronunciations
+  - assets/audio/pronunciations/kea.mp3
+
+  # Calls
+  - assets/audio/calls/kea.mp3
+##End Assets
+
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
