--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="discover_deep_cove"
+        android:label="Discover Deep Cove"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
