--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ intranetUrl=
 accessToken=
 dataSyncUrl=
 dataHashUrl=
-fileSyncUrl=
-fileHashUrl=
+filesSyncUrl=
+filesHashUrl=
 
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
