--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-appName=
+appName= # eg "Discover Deep Cove"
 
 # CMS server information
-remoteUrl=
+remoteUrl= # eg "http://mylittleblue.xyz/"
 intranetUrl=
-accessToken=
-dataSyncUrl=
+accessToken= # eg "123456789"
+dataSyncUrl= # eg "Sync/data"
 dataHashUrl=
 filesSyncUrl=
 filesHashUrl=
