Add examples to .env.example

--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,11 @@ filesHashUrl=
 
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
+# NOTE: This mode will break the app if running in iOS. For debug purposes only.
 debugStorageMode=
 
 # Path to the sqlite database file
-databasePath=
+databasePath= # eg 'data/deepcove.db'
 
 # Path to which the zipped resource file will be extracted
-resourcesPath=
+resourcesPath= # 'resources/sync'
