--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,16 +20,28 @@ dependencies:
   flutter:
     sdk: flutter
 
-  http: ^0.12.0+2             # BSD
-  archive: ^2.0.8             # Apache 2.0
-  path_provider: ^1.1.0       # BSD
-  flutter_dotenv: ^2.0.1      # MIT
-  permission_handler: ^3.0.1  # MIT
-
   # Database related packages
-  sqflite: ^1.1.5               # MIT
-  jaguar_orm: ^2.2.6            # BSD
-  jaguar_query_sqflite: ^2.2.9  # BSD
+  sqflite: ^1.1.5                     # MIT
+  jaguar_orm: ^2.2.6                  # BSD
+  jaguar_query_sqflite: ^2.2.9        # BSD
+
+  # Map related packages
+  flutter_map: ^0.5.6
+  flutter_map_marker_cluster: ^0.2.1  # BSD
+
+  # Misc
+  http: ^0.12.0+2                     # BSD
+  archive: ^2.0.8                     # Apache 2.0
+  path_provider: ^1.1.0               # BSD
+  flutter_dotenv: ^2.0.1              # MIT
+  permission_handler: ^3.0.1          # MIT
+  barcode_scan: ^1.0.0                # MIT
+  font_awesome_flutter: ^8.4.0        # MIT
+  audioplayers: ^0.13.1               # MIT
+  carousel_pro: ^1.0.0                # MIT
+  toast: ^0.1.4                       # MIT
+  image_picker: ^0.6.0+15             # Apache 2.0
+  flutter_launcher_icons: ^0.7.2+1    # MIT
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,6 +53,8 @@ dev_dependencies:
 
   build_runner: ^1.1.0      #BSD    -   1.4.0 available but not supported by Jaguar at this time
   jaguar_orm_gen: ^2.2.27   #BSD
+
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -60,6 +74,56 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - .env
+    # util
+    - assets/icon/icon.png
+    - assets/peaks.png
+    - assets/map.mbtiles
+    - assets/logo.png
+
+    ##FactFile
+    # primary
+    - assets/images/primary/kea.jpg
+    - assets/images/primary/rifleman.jpg
+    - assets/images/primary/tomtit.jpg
+    - assets/images/primary/mountainBeech.jpg
+    - assets/images/primary/rimu.jpg
+    - assets/images/primary/pekinDuck.jpg
+    - assets/images/primary/powerStation.jpg
+    # secondary
+    - assets/images/secondary/kea.jpg
+    - assets/images/secondary/rifleman.jpg
+    - assets/images/secondary/tomtit.jpg
+    - assets/images/secondary/mountainBeech.jpg
+    - assets/images/secondary/rimu.jpg
+    - assets/images/secondary/pekinDuck.png
+    - assets/images/secondary/powerStation.jpg
+    #tertiary
+    - assets/images/tertiary/kea.jpg
+    - assets/images/tertiary/rifleman.jpg
+    - assets/images/tertiary/tomtit.jpg
+    - assets/images/tertiary/mountainBeech.jpg
+    - assets/images/tertiary/rimu.jpg
+    - assets/images/tertiary/pekinDuck.png
+    - assets/images/tertiary/powerStation.jpg
+
+    ##Activities
+    #count
+    - assets/images/activities/count/lancewood.jpg
+    #pictureSelect
+    - assets/images/activities/pictureSelect/mountainBeech.jpg
+    - assets/images/activities/pictureSelect/rimu.jpg
+    - assets/images/activities/pictureSelect/totara.jpg
+    #pictureTap
+    - assets/images/activities/pictureTap/powerStation.jpg
+    #textAnswer
+    - assets/images/activities/textAnswer/stump.jpg
+
+
+    # Pronunciations
+    - assets/audio/pronunciations/kea.mp3
+
+    # Calls
+    - assets/audio/calls/kea.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
