--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   barcode_scan:
-  flutter_map: ^0.5.6
+  flutter_map: ^0.5.5+2
   font_awesome_flutter: ^8.4.0
-  audioplayers: ^0.13.1
+  audioplayers: ^0.11.0  
   carousel_pro: ^0.0.13
-  flutter_launcher_icons: ^0.7.2
-  flutter_map_marker_cluster: ^0.2.1
+  flutter_launcher_icons: "^0.7.2"
+  flutter_map_marker_cluster: ^0.2.0+1
   toast: ^0.1.3  
   image_picker: ^0.6.0+10
 
