--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,11 @@ dev_dependencies:
   build_runner: ^1.1.0      #BSD    -   1.4.0 available but not supported by Jaguar at this time
   jaguar_orm_gen: ^2.2.27   #BSD
 
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "assets/icon/icon.png"
+
 
 
 
