Changes to settings page

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ dataSyncUrl= # eg "Sync/data"
 dataHashUrl=
 filesSyncUrl=
 filesHashUrl=
+versionsUrl=
 
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
