Prefill .env.example and add map settings
Save time when other people set up the app

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-appName= # eg "Discover Deep Cove"
+appName="Discover Deep Cove"
 
 # CMS server information
-remoteUrl= # eg "http://mylittleblue.xyz/"
+remoteUrl="https://deepcove.xyz/"
 intranetUrl=
-accessToken= # eg "123456789"
-dataSyncUrl= # eg "Sync/data"
-dataHashUrl=
-filesSyncUrl=
-filesHashUrl=
-versionsUrl=
+accessToken='123456789'
+dataSyncUrl='sync/data'
+dataHashUrl='sync/datahash'
+filesSyncUrl='sync/files'
+filesHashUrl='sync/fileshash'
+versionsUrl='sync/versions'
 
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
@@ -16,7 +16,18 @@ versionsUrl=
 debugStorageMode=
 
 # Path to the sqlite database file
-databasePath= # eg 'data/deepcove.db'
+databasePath='data/deepcove.db'
 
 # Path to which the zipped resource file will be extracted
-resourcesPath= # 'resources/sync'
+resourcesPath='resources'
+
+# Master settings for the map
+minZoom=14
+maxZoom=18
+defaultZoom=eg 16
+defaultCenterLat=-45.463983
+defaultCenterLong=167.155695
+swPanBoundaryLat=-45.486373
+swPanBoundaryLong=167.134838
+nePanBoundaryLat=-45.441585
+nePanBoundaryLong=167.176552
