--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ resourcesPath='resources'
 # Master settings for the map
 minZoom=14
 maxZoom=18
-defaultZoom=eg 16
+defaultZoom=16
 defaultCenterLat=-45.463983
 defaultCenterLong=167.155695
 swPanBoundaryLat=-45.486373
