--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ versionsUrl='sync/versions'
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
 # NOTE: This mode will break the app if running in iOS. For debug purposes only.
-debugStorageMode=
+debugStorageMode=true
 
 # Path to the sqlite database file
 databasePath='data/deepcove.db'
