--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=EmVoncCpAT1j
 keyPassword=EmVoncCpAT1j
 keyAlias=key
-storeFile=/Users/Mitchell/Documents/DeepCove.jks
+storeFile=C:/Users/Mitchell/Documents/DeepCove.jks
