Fix crash when database doesn't exist.
Fixes #51.

Background exceptions are still thrown even though I am not displaying the map until after data has been loaded. For some reason, the maps initState is still being called??

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
   assets:
     - .env
     - assets/icon/icon.png
+    - assets/splash_logo.png
     - assets/peaks.png
     - assets/map.mbtiles
 
