--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_launcher_icons: ^0.7.2+1    # MIT
   url_launcher: ^5.1.2                # BSD
   keyboard_visibility: ^0.5.6         # MIT
+  dart_ping: ^1.0.0                   # MIT
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
