--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,11 @@
 appName="Discover Deep Cove"
 
 # CMS server information
-remoteUrl="https://deepcove.xyz/"
-intranetUrl=
-accessToken='123456789'
-dataSyncUrl='sync/data'
-dataHashUrl='sync/datahash'
-filesSyncUrl='sync/files'
-filesHashUrl='sync/fileshash'
-versionsUrl='sync/versions'
+remoteUrl="http://lan.deepcove.xyz/"
+intranetUrl="https://intranet.deepcove.xyz/api/app/"
+
+# API endpoint configuration
+media='media'
 
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
@@ -17,6 +14,7 @@ debugStorageMode=true
 
 # Path to the sqlite database file
 databasePath='data/deepcove.db'
+tempDatabasePath='data/deepcove.temp.db
 
 # Path to which the zipped resource file will be extracted
 resourcesPath='resources'
