(WIP) Mobile app now downloads images from server
Only synchronous at this point.

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,11 @@ appName="Discover Deep Cove"
 
 # CMS server information
 remoteUrl="http://lan.deepcove.xyz/"
-intranetUrl="https://intranet.deepcove.xyz/api/app/"
+intranetUrl="https://intranet.deepcove.xyz/"
 
 # API endpoint configuration
-media='media'
+media='api/app/media'
+mediaDownload='media'
 
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
