Implement config table sync

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ remoteUrl="http://lan.deepcove.xyz/"
 intranetUrl="https://intranet.deepcove.xyz/"
 
 # API endpoint configuration
+config='api/app/config'
 media='api/app/media'
 mediaDownload='media'
 
