Implement quiz sync

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ intranetUrl="https://intranet.deepcove.xyz/"
 config='api/app/config'
 media='api/app/media'
 mediaDownload='media'
+quizzes='api/app/quizzes'
 
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
@@ -17,6 +18,9 @@ debugStorageMode=true
 # Path to the sqlite database file
 databasePath='data/deepcove.db'
 tempDatabasePath='data/deepcove.temp.db
+
+# Whether to download media async or not
+asyncMediaDownload=false
 
 # Path to which the zipped resource file will be extracted
 resourcesPath='resources'
