Implement fact file sync

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ config='api/app/config'
 media='api/app/media'
 mediaDownload='media'
 quizzes='api/app/quizzes'
+factFiles='api/app/factfiles'
 
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
