Implement activity sync

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ media='api/app/media'
 mediaDownload='media'
 quizzes='api/app/quizzes'
 factFiles='api/app/factfiles'
+tracks='/api/app/tracks'
+activities='api/app/activities'
 
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
@@ -23,7 +25,7 @@ tempDatabasePath='data/deepcove.temp.db
 # Whether to download media async or not
 asyncMediaDownload=false
 
-# Path to which the zipped resource file will be extracted
+# Root path to which the resource files will be downloaded
 resourcesPath='resources'
 
 # Master settings for the map
