--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.7.2+1    # MIT
   url_launcher: ^5.1.2                # BSD
   keyboard_visibility: ^0.5.6         # MIT
+  percent_indicator: ^2.1.1+1         # BSD
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
