--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   url_launcher: ^5.1.2                # BSD
   keyboard_visibility: ^0.5.6         # MIT
   percent_indicator: ^2.1.1+1         # BSD
+  gallery_saver: ^1.0.4               # Apache 2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
