Fix audio icon remaining green if user answered before playing had completed

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 appName="Discover Deep Cove"
 
 # CMS server information
-remoteUrl="http://lan.deepcove.xyz/"
+remoteUrl="https://dev.deepcovehostel.co.nz/"
 intranetUrl="https://intranet.deepcove.xyz/"
 
 # API endpoint configuration
