Update env for notices

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ quizzes='api/app/quizzes'
 factFiles='api/app/factfiles'
 tracks='/api/app/tracks'
 activities='api/app/activities'
+notices='api/notices/app'
 
 # If 'true', files will be stored in external storage, visible to the user.
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
@@ -20,10 +21,10 @@ debugStorageMode=true
 
 # Path to the sqlite database file
 databasePath='data/deepcove.db'
-tempDatabasePath='data/deepcove.temp.db
+tempDatabasePath='data/deepcove.temp.db'
 
 # Whether to download media async or not
-asyncMediaDownload=false
+asyncMediaDownload=true
 
 # Root path to which the resource files will be downloaded
 resourcesPath='resources'
