Added new ENV var to turn on/off debug related print messages

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ notices='api/notices/app'
 # If not 'true', files will be stored in app's internal storage, hidden to the user.
 # NOTE: This mode will break the app if running in iOS. For debug purposes only.
 debugStorageMode=true
+debugMessages=true
 
 # Path to the sqlite database file
 databasePath='data/deepcove.db'
