--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: discover_deep_cove
 description: Guided walk application for visitors to Deep Cove.
-
+publish_to: none
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -17,50 +17,42 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
+  archive: ^2.0.8                     # Apache 2.0
+  audioplayers: ^0.13.1               # MIT
+  carousel_pro: ^1.0.0                # MIT
+  cron: ^0.2.2                        # BSD
   flutter:
     sdk: flutter
+  flutter_dotenv: ^2.0.1              # MIT
+  flutter_icons: 1.0.0+1              # Apache 2.0
+  flutter_launcher_icons: ^0.7.2+1    # MIT
+  flutter_local_notifications: ^0.8.3 # BSD
+  font_awesome_flutter: ^8.4.0        # MIT
+  gallery_saver: ^1.0.4               # Apache 2.0
+  http: ^0.12.0+2                     # BSD
+  image_picker: ^0.6.0+15             # Apache 2.0
+  majascan:                           # MIT
+    path: ./majascan-0.3.5
+  path_provider: ^1.3.0               # BSD
+  path_provider_ex: ^1.0.1            # MIT
+  percent_indicator: ^2.1.1+1         # BSD
+  permission_handler: ^3.0.1          # MIT
+  shared_preferences: ^0.5.4+6        # BSD
+  toast: ^0.1.4                       # MIT
 
   # Database related packages
-  sqflite: ^1.1.5                     # MIT
   jaguar_orm: ^2.2.6                  # BSD
   jaguar_query_sqflite: ^2.2.9        # BSD
+  sqflite: ^1.1.5                     # MIT
 
   # Map related packages
   flutter_map: ^0.5.6
   flutter_map_marker_cluster: ^0.2.1  # BSD
 
-  # Misc
-  http: ^0.12.0+2                     # BSD
-  archive: ^2.0.8                     # Apache 2.0
-  path_provider: ^1.3.0               # BSD
-  path_provider_ex: ^1.0.1             # MIT
-  flutter_dotenv: ^2.0.1              # MIT
-  permission_handler: ^3.0.1          # MIT
-  majascan:
-    path: ./majascan-0.3.5
-  font_awesome_flutter: ^8.4.0        # MIT
-  audioplayers: ^0.13.1               # MIT
-  carousel_pro: ^1.0.0                # MIT
-  toast: ^0.1.4                       # MIT
-  image_picker: ^0.6.0+15             # Apache 2.0
-  flutter_launcher_icons: ^0.7.2+1    # MIT
-  flutter_icons: 1.0.0+1              # Apache 2.0
-  percent_indicator: ^2.1.1+1         # BSD
-  gallery_saver: ^1.0.4               # Apache 2.0
-  shared_preferences: ^0.5.4+6        # BSD
-  cron: ^0.2.2                        # BSD
-  flutter_local_notifications: ^0.8.3 # BSD
-  
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   build_runner: ^1.1.0      #BSD    -   1.4.0 available but not supported by Jaguar at this time
+  flutter_test:
+    sdk: flutter  
   jaguar_orm_gen: ^2.2.27   #BSD
 
 flutter_icons:
@@ -68,53 +60,11 @@ flutter_icons:
   ios: true
   image_path: "assets/icon/icon.png"
 
-
-
-
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
   assets:
     - .env
     - assets/icon/icon.png
     - assets/peaks.png
     - assets/map.mbtiles
     - assets/invalidQRcode.png
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
