--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: discover_deep_cove
 description: Guided walk application for visitors to Deep Cove.
-publish_to: none
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -31,8 +30,7 @@ dependencies:
   gallery_saver: ^1.0.4               # Apache 2.0
   http: ^0.12.0+2                     # BSD
   image_picker: ^0.6.0+15             # Apache 2.0
-  majascan:                           # MIT
-    path: ./majascan-0.3.5
+  majascan: 0.3.5                     # MIT
   path_provider: ^1.3.0               # BSD
   path_provider_ex: ^1.0.1            # MIT
   percent_indicator: ^2.1.1+1         # BSD
@@ -51,6 +49,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^1.1.0      #BSD    -   1.4.0 available but not supported by Jaguar at this time
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter  
   jaguar_orm_gen: ^2.2.27   #BSD
