--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,3 +4,5 @@ linter:
   rules:
     prefer_relative_imports: true
     prefer_single_quotes: true
+    use_build_context_synchronously: false
+    library_private_types_in_public_api: false
