--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   http: ^0.12.0+2                     # BSD
   image_picker: ^0.6.0+15             # Apache 2.0
   majascan: 0.3.5                     # MIT
+  meta: ^1.7.0                        # BSD
+  path: ^1.8.1                        # BSD
   path_provider: ^1.3.0               # BSD
   path_provider_ex: ^1.0.1            # MIT
   percent_indicator: ^2.1.1+1         # BSD
