--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,3 +6,7 @@ linter:
     prefer_single_quotes: true
     use_build_context_synchronously: false
     library_private_types_in_public_api: false
+    use_key_in_widget_constructors: false
+    annotate_overrides: false
+    avoid_function_literals_in_foreach_calls: false
+    unused_field: false
