--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,45 +16,45 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  archive: ^2.0.8                     # Apache 2.0
-  audioplayers: ^0.13.1               # MIT
-  carousel_pro: ^1.0.0                # MIT
-  cron: ^0.2.2                        # BSD
+  archive: ^2.0.8                         # Apache 2.0
+  audioplayers: ^0.16.1                   # MIT
+  carousel_pro: ^1.0.0                    # MIT
+  cron: ^0.5.0                            # BSD
   flutter:
     sdk: flutter
-  flutter_dotenv: ^2.0.1              # MIT
-  flutter_icons: 1.0.0+1              # Apache 2.0
-  flutter_launcher_icons: ^0.7.2+1    # MIT
-  flutter_local_notifications: ^0.8.3 # BSD
-  font_awesome_flutter: ^8.4.0        # MIT
-  gallery_saver: ^1.0.4               # Apache 2.0
-  http: ^0.12.0+2                     # BSD
-  image_picker: ^0.6.0+15             # Apache 2.0
-  majascan: 0.3.5                     # MIT
-  meta: ^1.7.0                        # BSD
-  path: ^1.8.1                        # BSD
-  path_provider: ^1.3.0               # BSD
-  path_provider_ex: ^1.0.1            # MIT
-  percent_indicator: ^2.1.1+1         # BSD
-  permission_handler: ^3.0.1          # MIT
-  shared_preferences: ^0.5.4+6        # BSD
-  toast: ^0.1.4                       # MIT
+  flutter_dotenv: ^2.0.1                  # MIT
+  flutter_icons: ^1.1.0                   # Apache 2.0
+  flutter_launcher_icons: ^0.8.1          # MIT
+  flutter_local_notifications: ^0.8.3     # BSD
+  font_awesome_flutter: ^10.1.0           # MIT
+  gallery_saver: ^2.0.3                   # Apache 2.0
+  http: ^0.12.0+2                         # BSD
+  image_picker: ^0.6.0+15                 # Apache 2.0
+  majascan: ^0.5.0                        # MIT
+  meta: ^1.7.0                            # BSD
+  path: ^1.8.1                            # BSD
+  path_provider: ^1.3.0                   # BSD
+  path_provider_ex: ^1.0.1                # MIT
+  percent_indicator: ^4.2.2               # BSD
+  permission_handler: ^3.0.1              # MIT
+  shared_preferences: ^0.5.4+6            # BSD
+  toast: ^0.1.4                           # MIT
 
   # Database related packages
-  jaguar_orm: ^2.2.6                  # BSD
-  jaguar_query_sqflite: ^2.2.9        # BSD
-  sqflite: ^1.1.5                     # MIT
+  jaguar_orm: ^2.2.6                      # BSD
+  jaguar_query_sqflite: ^2.2.9            # BSD
+  sqflite: ^1.1.5                         # MIT
 
   # Map related packages
-  flutter_map: ^0.5.6
-  flutter_map_marker_cluster: ^0.2.1  # BSD
+  flutter_map: ^0.5.6                     # BSD
+  flutter_map_marker_cluster: ^0.2.1      # BSD
 
 dev_dependencies:
-  build_runner: ^1.1.0      #BSD    -   1.4.0 available but not supported by Jaguar at this time
+  build_runner: ^1.1.0                    #BSD    -   1.4.0 available but not supported by Jaguar at this time
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter  
-  jaguar_orm_gen: ^2.2.27   #BSD
+  jaguar_orm_gen: ^2.2.27                 #BSD
 
 flutter_icons:
   android: "launcher_icon" 
