--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   path_provider: ^1.3.0                   # BSD
   path_provider_ex: ^1.0.1                # MIT
   percent_indicator: ^4.2.2               # BSD
-  permission_handler: ^3.0.1              # MIT
+  permission_handler: ^3.0.1 
   shared_preferences: ^0.5.4+6            # BSD
   toast: ^0.1.4                           # MIT
 
@@ -48,6 +48,9 @@ dependencies:
   # Map related packages
   flutter_map: ^0.5.6                     # BSD
   flutter_map_marker_cluster: ^0.2.1      # BSD
+
+dependency_overrides:
+  platform: ^3.1.0 
 
 dev_dependencies:
   build_runner: ^1.1.0                    #BSD    -   1.4.0 available but not supported by Jaguar at this time
