--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,14 +50,14 @@ dependencies:
   flutter_map_marker_cluster: ^0.2.1      # BSD
 
 dependency_overrides:
-  platform: ^3.1.0 
+  platform: ^3.1.0                        # BSD
 
 dev_dependencies:
-  build_runner: ^1.1.0                    #BSD    -   1.4.0 available but not supported by Jaguar at this time
+  build_runner: ^1.1.0                    # BSD    -   1.4.0 available but not supported by Jaguar at this time
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter  
-  jaguar_orm_gen: ^2.2.27                 #BSD
+  jaguar_orm_gen: ^2.2.27                 # BSD
 
 flutter_icons:
   android: "launcher_icon" 
