--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   flutter_dotenv: ^5.0.2                  # MIT
   flutter_icons: ^1.1.0                   # Apache 2.0
   flutter_launcher_icons: ^0.8.1          # MIT
-  flutter_local_notifications: ^0.8.3     # BSD
+  flutter_local_notifications: ^4.0.1+2   # BSD
   font_awesome_flutter: ^10.1.0           # MIT
   gallery_saver: ^2.0.3                   # Apache 2.0
   http: ^0.12.0+2                         # BSD
