--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: discover_deep_cove
 description: Guided walk application for visitors to Deep Cove.
+publish_to none:
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -46,8 +47,10 @@ dependencies:
   sqflite: ^1.1.5                         # MIT
 
   # Map related packages
-  flutter_map: ^0.5.6                     # BSD
-  flutter_map_marker_cluster: ^0.2.1      # BSD
+  flutter_map: ^0.12.0                    # BSD
+  flutter_map_marker_cluster: ^0.3.5      # BSD
+  flutter_map_mbtiles_provider:
+    path: ./flutter_map_mbtiles_provider
 
 dependency_overrides:
   platform: ^3.1.0                        # BSD
