--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   path_provider: ^1.3.0                   # BSD
   path_provider_ex: ^1.0.1                # MIT
   percent_indicator: ^4.2.2               # BSD
-  permission_handler: ^3.0.1 
+  permission_handler: ^5.1.0+2 
   shared_preferences: ^0.5.4+6            # BSD
   toast: ^0.3.0                           # MIT
 
