--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,11 +2,14 @@ include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
+    #true
     prefer_relative_imports: true
     prefer_single_quotes: true
-    use_build_context_synchronously: false
-    library_private_types_in_public_api: false
-    use_key_in_widget_constructors: false
+    require_trailing_commas: true
+    #false
     annotate_overrides: false
     avoid_function_literals_in_foreach_calls: false
+    library_private_types_in_public_api: false
     unused_field: false
+    use_build_context_synchronously: false
+    use_key_in_widget_constructors: false
