--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter_icons: ^1.1.0                   # Apache 2.0
   flutter_local_notifications: ^4.0.1+2   # BSD
   font_awesome_flutter: ^10.1.0           # MIT
-  gallery_saver:
+  gallery_saver:                          # Apache 2.0
     git:
       url: git://github.com/deepcove-trust/gallery_saver
       ref: master
@@ -30,7 +30,7 @@ dependencies:
   path_provider: ^1.3.0                   # BSD
   path_provider_ex: ^1.0.1                # MIT
   percent_indicator: ^4.2.2               # BSD
-  permission_handler: ^5.1.0+2 
+  permission_handler: ^5.1.0+2            # MIT
   shared_preferences: ^0.5.4+6            # BSD
   toast: ^0.3.0                           # MIT
 
@@ -53,14 +53,12 @@ dependency_overrides:
 dev_dependencies:
   build_runner: ^1.1.0                    # BSD    -   1.4.0 available but not supported by Jaguar at this time
   flutter_launcher_icons: ^0.8.1          # MIT
-  flutter_lints: ^2.0.1
-  flutter_test:
-    sdk: flutter  
+  flutter_lints: ^2.0.1                   # BSD
   jaguar_orm_gen: ^2.2.27                 # BSD
 
 flutter_icons:
   android: "launcher_icon" 
-  ios: true
+  ios: false
   image_path: "assets/icon/icon.png"
 
 flutter:
