--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
               />
             <meta-data
               android:name="io.flutter.embedding.android.SplashScreenDrawable"
-              android:resource="@drawable/splash_logo"
+              android:resource="@drawable/splash"
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
